# design-patterns-cpp20

./: CMakeLists.txt  README.md
src/design-patterns/: CMakeLists.txt
src/design-patterns/abstract_factory/: CoffeeFactory.h  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  TeaFactory.h  main.cpp
src/design-patterns/adapter/: AdapterGeometry.cpp  BasicGeometry.h
src/design-patterns/bridge/: Person.cpp  Person.h  RasterRenderer.cpp
src/design-patterns/builder/: EmailBuilder.cpp  HtmlBuilder.cpp  PersonBuilder.cpp  PersonBuilderExt.cpp  Tag.cpp
src/design-patterns/composite/: Creature.cpp  Graph.cpp  Neuron.cpp  Product.cpp
src/design-patterns/decorator/: DynamicsShape.cpp  Logger.cpp  Logger2.cpp  StaticShape.cpp
src/design-patterns/facade/: MagicSquare.cpp
src/design-patterns/factory_method/: Material.cpp  Material.h  Point2D.hpp  SolidWall.cpp  SolidWall.h  Wall.cpp  Wall.h  WallFactory.cpp  WallFactory.h  main.cpp
src/design-patterns/prototype/: ContactCopy.cpp  EmployeeFactory.cpp  ExtendedAddress.cpp  SerializationAddress.cpp
src/design-patterns/singleton/: PerThreadSingleton.cpp  SingletonDatabase.cpp
src/design-principles/: CMakeLists.txt
src/design-principles/dip/: Car.cpp
src/design-principles/isp/: Print.cpp
src/design-principles/lsp/: Rectangle.cpp
src/design-principles/ocp/: Product1.cpp  Product2.cpp
src/design-principles/srp/: Journal.cpp
